fixing movile visibility for home and Crypt

--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,14 @@
   max-height: 100vh;
   width: 100%;
   overflow-y: auto;
-  
 }
 .mainApp {
   display:flex;
   background-color: black;
+  width:100%;
 }
 .main__header{
   display:flex;
-  width: 100%;
+  width: 100% ;
 }
 
